fixed spacing in played instruments box
git-svn-id: file:///srv/svn/myousica/myousica/trunk@308 1758279c-6b0d-4dd2-8212-40bfc25400ca

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -439,6 +439,9 @@ tr.nav-song td{
 	float:left;
 	margin-right:20px;
 }
+.played-instruments .small-box .thumb {
+        margin-right:10px;
+}
 /* people */
 .people-list .top-box{
 	margin-left: 5px;
